# SQL

HW2/: SQLHW2.sql  sqlHW1.sql
hw4/: PART1.sql  PART2.sql  PART3.sql
hw5/: CMakeLists.txt  main.cpp
hw6/: hw6-1.cpp  hw6-2.cpp
